--- a/home/index.html
+++ b/home/index.html
@@ -7,7 +7,7 @@
   <title>Matthys Creative</title>
   <meta name="description" content="Analyses, briefings, and scenario-based narrative entry points." />
 
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="/01-assets/style/favicon.ico" type="image/x-icon" />
 
   <!-- Global CSS -->
   <link rel="stylesheet" href="/01-assets/style/global.css" />
