--- a/contact/index.html
+++ b/contact/index.html
@@ -39,8 +39,12 @@
       <h2>Contact</h2>
       <p>If you would like to get in touch with Matthys Creative, share feedback, or raise a question related to the work published here, you can do so using the contact form.</p>
       <p>The button below opens a Google Form where you can submit your message and any relevant context. Messages are read individually, and replies are sent by email where appropriate.</p>
-      <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdJHroertap_hl8fFRAJmZmJnuHCccg_46ZZ2VRburVZjySSQ/viewform">Open contact form</a></p>
-    </section>        
+      <p>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdJHroertap_hl8fFRAJmZmJnuHCccg_46ZZ2VRburVZjySSQ/viewform">
+          <button type="button">Open contact form</button>
+        </a>
+      </p>
+    </section>
 
   </main>
 
