--- a/books/the-clerk/analysis/algorithmic-control-escalation/index.html
+++ b/books/the-clerk/analysis/algorithmic-control-escalation/index.html
@@ -60,8 +60,7 @@
     </section>
     
     <section>
-      <h2>Get the opening chapter</h2>
-      <p>[Email capture placeholder]</p>
+      <button class="ml-onclick-form" onclick="ml('show', '93BMHX', true)">Click here to show form</button>
     </section>    
           
   </main>
